Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-34776

Assertion failure in Item_string::do_build_clone

    XMLWordPrintable

Details

    Description

      CREATE VIEW v AS SELECT version() AS f;
      SELECT * FROM v WHERE f = '10.5.20';
      

      10.5 f41a120298aa17ca80eecaa68614a6addf91ebc6

      mariadbd: /data/bld/10.5-asan/sql/item.h:1677: Item* Item::get_copy(THD*) const: Assertion `typeid(*copy) == typeid(*this)' failed.
      240819 19:25:09 [ERROR] mysqld got signal 6 ;
       
      #9  0x00007fda3aa53e32 in __GI___assert_fail (assertion=0x564a93c5e260 "typeid(*copy) == typeid(*this)", file=0x564a93c5de40 "/data/bld/10.5-asan/sql/item.h", line=1677, function=0x564a93c5e2a0 "Item* Item::get_copy(THD*) const") at ./assert/assert.c:101
      #10 0x0000564a918a14d4 in Item::get_copy (this=0x62b00003c060, thd=0x62b000069218) at /data/bld/10.5-asan/sql/item.h:1677
      #11 0x0000564a918a49a9 in Item_string::do_build_clone (this=0x62b00003c060, thd=0x62b000069218) at /data/bld/10.5-asan/sql/item.h:4687
      #12 0x0000564a91a9433b in Item::build_clone (this=0x62b00003c060, thd=0x62b000069218) at /data/bld/10.5-asan/sql/item.h:1691
      #13 0x0000564a92450fb3 in Item_field::derived_field_transformer_for_where (this=0x62900023a238, thd=0x62b000069218, arg=0x62b00003bb70 "") at /data/bld/10.5-asan/sql/item.cc:7912
      #14 0x0000564a9241418b in Item::transform (this=0x62900023a238, thd=0x62b000069218, transformer=&virtual Item::derived_field_transformer_for_where(THD*, unsigned char*), arg=0x62b00003bb70 "") at /data/bld/10.5-asan/sql/item.cc:605
      #15 0x0000564a92516211 in Item_args::transform_args (this=0x62900023a4a8, thd=0x62b000069218, transformer=&virtual table offset 1344, arg=0x62b00003bb70 "") at /data/bld/10.5-asan/sql/item_func.cc:503
      #16 0x0000564a925164a2 in Item_func::transform (this=0x62900023a418, thd=0x62b000069218, transformer=&virtual table offset 1344, argument=0x62b00003bb70 "") at /data/bld/10.5-asan/sql/item_func.cc:539
      #17 0x0000564a91a92462 in transform_condition_or_part (thd=0x62b000069218, cond=0x62900023a418, transformer=&virtual table offset 1344, arg=0x62b00003bb70 "") at /data/bld/10.5-asan/sql/sql_derived.cc:1390
      #18 0x0000564a91b2810b in st_select_lex::pushdown_cond_into_where_clause (this=0x62b00003bb70, thd=0x62b000069218, cond=0x62900023a418, remaining_cond=0x7fda31629130, transformer=&virtual table offset 1344, arg=0x62b00003bb70 "") at /data/bld/10.5-asan/sql/sql_lex.cc:10757
      #19 0x0000564a91a931e8 in pushdown_cond_for_derived (thd=0x62b000069218, cond=0x62b0000392d0, derived=0x62b000038980) at /data/bld/10.5-asan/sql/sql_derived.cc:1583
      #20 0x0000564a91c31f17 in JOIN::optimize_inner (this=0x62b00003cf88) at /data/bld/10.5-asan/sql/sql_select.cc:2229
      #21 0x0000564a91c2ce09 in JOIN::optimize (this=0x62b00003cf88) at /data/bld/10.5-asan/sql/sql_select.cc:1765
      #22 0x0000564a91c4de00 in mysql_select (thd=0x62b000069218, tables=0x62b000038980, fields=..., conds=0x62b0000392d0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2147748608, result=0x62b00003cf58, unit=0x62b00006d3c8, select_lex=0x62b0000382f0) at /data/bld/10.5-asan/sql/sql_select.cc:4900
      #23 0x0000564a91c1e3bc in handle_select (thd=0x62b000069218, lex=0x62b00006d300, result=0x62b00003cf58, setup_tables_done_option=0) at /data/bld/10.5-asan/sql/sql_select.cc:449
      #24 0x0000564a91b857de in execute_sqlcom_select (thd=0x62b000069218, all_tables=0x62b000038980) at /data/bld/10.5-asan/sql/sql_parse.cc:6431
      #25 0x0000564a91b73aed in mysql_execute_command (thd=0x62b000069218) at /data/bld/10.5-asan/sql/sql_parse.cc:4030
      #26 0x0000564a91b905ed in mysql_parse (thd=0x62b000069218, rawbuf=0x62b000038238 "SELECT * FROM v WHERE f = '10.5.20'", length=35, parser_state=0x7fda3162ac10, is_com_multi=false, is_next_command=false) at /data/bld/10.5-asan/sql/sql_parse.cc:8229
      #27 0x0000564a91b65799 in dispatch_command (command=COM_QUERY, thd=0x62b000069218, packet=0x629000235219 "SELECT * FROM v WHERE f = '10.5.20'", packet_length=35, is_com_multi=false, is_next_command=false) at /data/bld/10.5-asan/sql/sql_parse.cc:1892
      #28 0x0000564a91b6212c in do_command (thd=0x62b000069218) at /data/bld/10.5-asan/sql/sql_parse.cc:1376
      #29 0x0000564a91fba2b9 in do_handle_one_connection (connect=0x608000002ab8, put_in_cache=true) at /data/bld/10.5-asan/sql/sql_connect.cc:1417
      #30 0x0000564a91fb9c81 in handle_one_connection (arg=0x608000002a38) at /data/bld/10.5-asan/sql/sql_connect.cc:1319
      #31 0x0000564a92c17046 in pfs_spawn_thread (arg=0x615000005318) at /data/bld/10.5-asan/storage/perfschema/pfs.cc:2201
      #32 0x00007fda3aaa8044 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
      #33 0x00007fda3ab2861c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81
      

      Attachments

        Issue Links

          Activity

            People

              sanja Oleksandr Byelkin
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 50m
                  50m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.