MDEV-34776 Assertion failure in Item_string::do_build_clone

Added missed methods to Item_string child.